<resources>
    <string name="app_name">TipTip</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_message">消息</string>
    <string name="title_contact">通讯录</string>
    <string name="title_userInfo">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addFriend">添加好友</string>
    <string name="inputFriendId">填写对方账号</string>
    <string name="add">添加</string>
    <string name="friend_info">个人名片</string>
    <string name="goToChat">聊天</string>
    <string name="deleteFriend">删除好友</string>
    <string name="send">发送</string>
    <string name="account">账号</string>
    <string name="nickname">昵称</string>
    <string name="input_userId">输入账号</string>
    <string name="input_password">输入密码</string>
    <string name="input_nickname">输入昵称</string>
    <string name="logout">注销</string>
    <string name="existApp">退出程序</string>
    <string name="main_page"></string>
</resources>
