<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Friend_infoActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingTop="10dp"
        android:background="@color/grey"
        >
        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/friendAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_user"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/friendId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:text="@string/account"
                    />
                <TextView
                    android:id="@+id/friendName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <Button
            android:id="@+id/goToChatBtn"
            android:layout_marginTop="20dp"
            android:layout_width="340dp"
            android:layout_height="58dp"
            android:text="@string/goToChat"
            android:textSize="18sp"
            android:onClick="goToChat"
            android:textColor="@color/white"
            android:background="@drawable/logout_btn"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/deleteFriendBtn"
            android:layout_width="340dp"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:text="@string/deleteFriend"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/delete_friend_btn"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>