<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/registerIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/registerUserId"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/input_userId"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:inputType="textPersonName"
                />
            <EditText
                android:id="@+id/registerUserName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/input_nickname"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:inputType="textPersonName"
                />
            <EditText
                android:id="@+id/registerUserPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/input_password"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/registerBtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="注册"
                android:onClick="registerCheck"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>